# source-chat-relay

./: .deepsource.toml  .editorconfig  .gitattributes  .gitignore  .travis.yml  41581934902e7f59d7f4c1d18f49a7a3e00a1ba2-7d4e6065edbf55da13d8.js  41581934902e7f59d7f4c1d18f49a7a3e00a1ba2-7d4e6065edbf55da13d8.js.map  Bot-Commands.md  CODEOWNERS  CODE_OF_CONDUCT.md  Cargo.toml  Filters.md  Gopkg.toml  Home.md  In-Game-Prefixes.md  Makefile  README.md  Recommended-Hosts.md  SUMMARY.md  Setup.md  Tips-And-Tricks.md  Troubleshooting.md  app-1cd27f6949ab1f00ef36.js  app-1cd27f6949ab1f00ef36.js.map  app-3d74645b867bd52a1469.js  app-3d74645b867bd52a1469.js.map  app-62ff62f02c2dc83f2202.js  app-62ff62f02c2dc83f2202.js.map  app-783bedc0ea5ce11ce140.js  app-783bedc0ea5ce11ce140.js.map  app-856ebb8dd899a6fde978.js  app-856ebb8dd899a6fde978.js.map  app-b96724273a326ab24d16.js  app-b96724273a326ab24d16.js.map  bors.toml  chunk-map.json  commons-21cd96545e23d8bd00af.js  commons-21cd96545e23d8bd00af.js.map  commons-3b257bf95579f4487c7e.js  commons-3b257bf95579f4487c7e.js.map  (+281 more)
client/: Cargo.toml  SCR-Version.inc  Source-Chat-Relay.sp  build.rs  rust-toolchain  sourcechatrelay.phrases.txt
client/include/: Source-Chat-Relay.inc  Source-Chat-Relay.sp  bytebuffer.inc  smlib.inc  socket.inc
client/include/smlib/: arrays.inc  clients.inc  colors.inc  concommands.inc  convars.inc  crypt.inc  debug.inc  dynarrays.inc  edicts.inc  effects.inc  entities.inc  files.inc  game.inc  general.inc  (+8 more)
client/shim/: .gitattributes  AMBuildScript  configure.py  libc_compat.cpp  shim.cpp  shim.h  sm_ext.cpp  sm_ext.h  sm_sdk_config.cpp  sm_sdk_config.h  source-chat-relay.vdf  sourcehook_hookmangen.h
client/src/: client.rs  error.rs  extension_meta.rs  lib.rs  packet.rs  player.rs
client/tests/: event_test.sp  example.sp  forward_test.sp  service_test.sp
libs/relay/: Cargo.toml  build.rs
libs/voice/: Cargo.toml  build.rs
server/: Cargo.toml  config.toml.example  go.mod  go.sum  main.go
server/bot/: about.go  auth.go  bot.go  channel.go  delete.go  entities.go  event.go  pipe.go  pipeline.go  util.go
server/config/: config.go  struct.go  version.go
server/database/: database.go
server/entity/: cache.go  entity.go  formatter.go  middleware.go  query.go  updater.go  utils.go
server/filter/: filter.go  struct.go  util.go
server/helper/: config.go  util.go
server/packet/: packet.go
server/protocol/: authenticate.go  base.go  chat.go  constants.go  errors.go  event.go  kv.go  manager.go  message.go  opcode.go  ping.go  socket.go
server/relay/: relay.go  util.go
server/src/: config.rs  error.rs  intentions.rs  main.rs
server/ui/: index.html  package.json  postcss.config.js  ui.go
(+186 files in other folders)
