[package]
name = "client"
version = "0.1.0"
authors = ["rumblefrog <contact@zhenyangli.me>"]
edition = "2018"

[lib]
name = "client"
crate-type = ["staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
cbindgen = "0.18"
