[package]
name = "client"
version = "0.1.0"
authors = ["rumblefrog <contact@zhenyangli.me>"]
edition = "2018"

[lib]
name = "client"
crate-type = ["staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crc = "2"
thiserror = "1"
byteorder = "1"
magnum-opus = "0.3"
samplerate = "0.2.4"
lazy_static = "1"

[dependencies.tokio]
version = "1"
features = ["full"]

[build-dependencies]
cbindgen = "0.19"
