[package]
name = "server"
version = "0.1.0"
authors = ["rumblefrog <contact@zhenyangli.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
thiserror = "1"
prost = "0.7"
prost-types = "0.7"
tokio-stream = "0.1"
env_logger = "0.8.2"

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.tokio-util]
version = "0.6"
features = ["full"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[build-dependencies]
prost-build = "0.7"
