[package]
name = "relay"
version = "0.1.0"
authors = ["rumblefrog <contact@zhenyangli.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
prost = "0.7"
prost-types = "0.10"

[dependencies.tokio]
version = "1"
features = ["rt-multi-thread", "net", "sync", "time"]

[build-dependencies]
prost-build = "0.7"
