[package]
name = "voice"
version = "0.1.0"
authors = ["rumblefrog <contact@zhenyangli.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
bytes = "1"
prost = "0.7"
prost-types = "0.7"
magnum-opus = "0.3"

[build-dependencies]
prost-build = "0.7"
